--- a/styles.css
+++ b/styles.css
@@ -1,55 +1,91 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-  }
+/* Center content on the page */
+.body-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin-bottom: 100px;
+  padding: 0;
+}
 
-  .container {
-    height: 748px;
-    width: 748px;
-    display: grid;
-    background-color: #000;
-    grid-template-columns: 320px 198px 153px 50px;
-    grid-template-rows: 414px 130px 155px 22px;
-    gap: 9px;
-  }
+/* Main container grid layout */
+.container {
+  height: 748px;
+  width: 748px;
+  display: grid;
+  background-color: #000;
+  grid-template-columns: 320px 198px 153px 50px;
+  grid-template-rows: 414px 130px 155px 22px;
+  gap: 9px;
+}
 
-  .item {
-    background-color: #f0f1ec;
-  }
+/* Default background for items */
+.item {
+  background-color: #f0f1ec;
+}
 
-  .red {
-    background-color: #e72f24;
-  }
+/* Specific colors for Mondrian's palette */
+.red {
+  background-color: #e72f24;
+}
 
-  .white1 {
-    grid-column: span 3;
-  }
+.blue {
+  background-color: #004592;
+  border-bottom: 10px solid #000;
+}
 
-  .white2 {
-    grid-row: span 2;
-  }
+.yellow {
+  background-color: #f9d01e;
+}
 
-  .white3 {
-    grid-area: 2 / 2 / 4 /4;
-  }
+.black {
+  background-color: #232629;
+}
 
-  .blue {
-    background-color: #004592;
-    border-bottom: 10px solid #000;
-  }
+/* Custom sizing and placement for certain white blocks */
+.white1 {
+  grid-column: span 3;
+}
 
-  .white4 {
-    grid-row: span 2;
-  }
+.white2 {
+  grid-row: span 2;
+}
 
-  .yellow {
-    background-color: #f9d01e;
-  }
+.white3 {
+  grid-area: 2 / 2 / 4 /4;
+}
 
-  .black {
-    background-color: #232629;
-  }
+.white4 {
+  grid-row: span 2;
+}
+
+/* Footer styling */
+.footer {
+  position: relative; /* To make sure it's not overlaping the content set to 100vh */
+  bottom: 2vmin;
+  width: 100%;
+  text-align: center;
+  font-size: medium;
+  color: #3b1e54;
+  background-color: #eeeeee;
+  padding: 10px 0;
+  border-top: 1px solid #d4bee4; /* Soft top border */
+}
+
+/* Footer text styling */
+.footer p {
+  margin: 5px 0;
+  font-weight: bold;
+}
+
+/* Hyperlink styling */
+.footer a {
+  color: #9b7ebd;
+  text-decoration: none;
+  font-weight: bold;
+  margin: 0 8px;
+}
+
+.footer a:hover {
+  color: #3b1e54; /* Darker hover effect */
+}
